# cross-sensor-cal

./: .gitignore  404.html  Abstracted_Drone_Correction.ipynb  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Calulating_Sun_angles.ipynb  Documentation for macrosystems project.md  Drone_correction_and_pixel_extraction.ipynb  Drone_correction_and_pixel_extraction_2.ipynb  Flight_line_processing_vignette.ipynb  Landsat_band_extraction.ipynb  Macrosystem_polygon_extractions.ipynb  Makefile  NEON Flightlines to process.csv  Pixel_extraction.ipynb  PublicationChecklist.md  README.md  RELEASING.md  Raster_processing.ipynb  Slope_Aspect_Drone_Data.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  Vignette_nayani.ipynb  base.py  batch_transfer.sh  batch_transfer_parallel.sh  build_merge_table.py  coef_plots_Ty.qmd  combine_extraction_csv.ipynb  combined_summary_log.txt  config_generator.py  config_generator_generic.py  convolution_csv_merge.py  correct.sh  cross_calibration_plots_NEON_AOP.ipynb  csv_plot.ipynb  (+46 more)
.github/: pull_request_template.md
.ipynb_checkpoints/: combined_summary_log-checkpoint.txt  extract_from_sorted_folders-checkpoint.ipynb  test_transfer_script-checkpoint.py
BRDF-Topo-HyTools/: README.md
Datasets/: Micasense band centers.xlsx  README.md  niwot_aop_macrosystems_data_2023_12_8_23.gpkg  niwot_aop_polygons_2023_12_8_23_analysis_ready_half_diam.gpkg
Resampling/: Drone_band_centers_and_widths.txt  README_RESAMPLING.md  landsat_band_parameters.json  resampling_demo.py
Topo_Corr_using_Methods/: Calulating_Sun_angles.ipynb  Slope_Aspect_Drone_Data.ipynb
_build/: doc_drift_report.json
api/: index.html
benchmarks/: index.html
brainpipe/: __init__.py
brdf_topo_algorithm/: index.html
configuration/: index.html
constraints/: lock-hytools.txt  requirements-ci.txt
convolution_resample/: download_and_convolve.py  resample.py  validation.py
cyverse-irods/: index.html
data/: README.md  hyperspectral_bands.json
deprecated/: README.md
dev-notes/: index.html
docs/: README.md  api.md  benchmarks.md  brdf_topo_algorithm.md  configuration.md  cyverse-irods.md  debugging_envi_naming.md  dev-guide.md  dev-notes.md  documentation-overview.md  documentation_style_guide.md  env-setup.md  env.md  extending.md  faq.md  glossary.md  index.md  naming-conventions.md  overview.md  pipeline.md  qa.md  quickstart.md  refactor_notes.md  references.md  requirements.txt  schemas.md  stage-01-raster-processing.md  stage-02-sorting.md  stage-03-pixel-extraction.md  stage-04-spectral-library.md  stage-05-mesma.md  troubleshooting.md  user-guide.md  validation.md
documentation-overview/: index.html
documentation_style_guide/: index.html
drone_cor_sup/: Angle_calculations_alternative.ipynb  BRDF_topo_Corrections_alternative.ipynb  config_gen_drone_mod.py  diagnostic_plots_drone.ipynb  envi_polygon_spectra_extraction (1).ipynb  extract_data_to_polygons (3).ipynb  median_qunatiles (1).ipynb  polygon spectra.ipynb  polygon_spectra_extraction_with_plots_v2 (1).ipynb  polygon_spectra_neon-across_sites.ipynb  tiff_to_envi_drone.ipynb  utils.py
env/: index.html
env-setup/: index.html
examples/: __init__.py  basic_calibration_workflow.py
export/: NEON_D13_NIWO_DP1_20170904_181819_reflectance_brdf_coeffs__corrected_0.json  NEON_D13_NIWO_DP1_20170904_181819_reflectance_topo_coeffs__corrected_0.json  r tiff plot.ipynb  ty_plots.qmd
extending/: index.html
faq/: index.html
glossary/: index.html
megan_unmixing/: unmixing.Rmd
naming-conventions/: index.html
notebooks/: 01_prism_climate_cube.ipynb
output/: config_0.json
overview/: index.html
paper/: README.md  bibliography.bib  paper.md
pipeline/: index.html
qa/: index.html
quickstart/: index.html
refactor_notes/: index.html
references/: index.html
schemas/: index.html
scripts/: check_docs_links.py
search/: search_index.json
sorted_files/: file_move_list.csv
src/: README.md  __init__.py  _noisy_wrappers.py  convolution_resample.py  envi_download.py  envi_visualization.py  file_sort.py  file_sort_adapter.py  file_types.py  hytools_compat.py  mask_raster.py  neon_to_envi.py  polygon_extraction.py  ray_utils.py  roi_spectral_comparison.py  standard_resample.py  topo_and_brdf_correction.py
stage-03-pixel-extraction/: index.html
stage-04-spectral-library/: index.html
stage-05-mesma/: index.html
tests/: README.md  __init__.py  conftest.py  test_brdf_scale.py  test_brdf_topo_streamlined.py  test_brightness_coefficients.py  test_convolution_resample_utils.py  test_cross_sensor_cal_shim.py  test_duckdb_merge.py  test_envi_header_parser.py  test_examples.py  test_file_sort.py  test_file_sort_adapter_lite.py  test_hytools_compat.py  test_hytools_gateway.py  test_hytools_preflight.py  test_import.py  test_legacy_streaming.py  test_neon_cube.py  test_neon_filename_parsing.py  test_neon_legacy.py  test_parquet_export.py  test_parquet_stage.py  test_paths.py  test_pipeline_convolution.py  test_pipeline_optional_ray.py  test_polygon_extraction.py  test_polygon_pipeline.py  test_preflight.py  test_qa_plots.py  test_resample_math_lite.py  test_roi_spectral_comparison.py  test_schema_parity.py  test_schema_utils.py  test_sort_core.py  test_stage_export.py  test_types_protocol.py  test_validate_parquets.py  utils_builders.py
tlm_check_spectra/: tlm_check_spectra.Rproj
tools/: apply_doc_fixes.py  doc_drift_audit.py  site_prepare.py  summarize_ty_tuff_contribs.py
troubleshooting/: index.html
ty_notebooks/: README.md
(+212 files in other folders)
