[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cross_sensor_cal"
version = "0.1.0"
description = "Cross-sensor calibration pipeline."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Earth Lab" }]
license = { file = "LICENSE" }
dependencies = [
    "numpy>=1.22",
    "pandas>=1.5",
    "scipy>=1.10",
    "pyarrow>=12",
    "requests>=2.31",
    "tqdm>=4.65",
]

[project.optional-dependencies]
tests = [
    "pytest>=7.4",
    "pytest-xdist>=3.5",
    "pytest-cov>=4.1",
    "rasterio>=1.3",
    "scipy>=1.10",
]
full = [
    "rasterio>=1.3",
    "geopandas>=0.13",
    "spectral>=0.23",
    "ray[default]>=2.2",
    "h5py>=3.8",
]

[project.scripts]
cscal-download = "cross_sensor_cal.cli:download_main"
cscal-pipeline = "cross_sensor_cal.cli:pipeline_main"

[project.urls]
Homepage = "https://github.com/earthlab/cross-sensor-cal"
Documentation = "https://earthlab.github.io/cross-sensor-cal/"
Issues = "https://github.com/earthlab/cross-sensor-cal/issues"

[project.classifiers]
"Programming Language :: Python :: 3"
"License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
"Operating System :: OS Independent"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
