[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cross_sensor_cal"
version = "2.2.0"
description = "Cross-sensor calibration pipeline."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Earth Lab" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "pyarrow",
    "pyproj",
    "h5py",
    "requests",
    "tqdm",
    "matplotlib",
    "rasterio",
    "shapely",
    "geopandas",
    "spectral>=0.23",
    "ray[default]>=2.2",
    "duckdb>=1.0.0",
]

[project.optional-dependencies]
tests = [
    "pytest>=7.4",
    "pytest-xdist>=3.5",
    "pytest-cov>=4.1",
]
full = [
    "spectral>=0.23",
    "ray[default]>=2.2",
]
qa = [
    "ImageHash",
    "Pillow",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-macros-plugin",
]

[project.scripts]
cscal-download = "cross_sensor_cal.cli:download_main"
cscal-pipeline = "cross_sensor_cal.cli.pipeline_cli:main"
cscal-qa = "cross_sensor_cal.cli.qa_cli:main"
cscal-recover-raw = "cross_sensor_cal.cli.recover_cli:main"
cscal-qa-metrics = "cross_sensor_cal.qa_metrics:main"
cscal-qa-dashboard = "cross_sensor_cal.qa_dashboard:main"
csc-merge-duckdb = "cross_sensor_cal.merge_duckdb:main"

[project.urls]
Homepage = "https://github.com/earthlab/cross-sensor-cal"
Documentation = "https://earthlab.github.io/cross-sensor-cal/"
Issues = "https://github.com/earthlab/cross-sensor-cal/issues"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
cross_sensor_cal = ["data/*.json"]

[tool.setuptools.packages.find]
where = ["src"]
