[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectralbridge"
version = "2.2.0"
description = "Translating reflectance across sensors and scales."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Earth Lab" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "pyarrow",
    "pyproj",
    "h5py",
    "requests",
    "tqdm",
    "matplotlib",
    "rasterio",
    "shapely",
    "geopandas",
    "spectral>=0.23",
    "ray[default]>=2.2",
    "duckdb>=1.0.0",
]

[project.optional-dependencies]
tests = [
    "pytest>=7.4",
    "pytest-xdist>=3.5",
    "pytest-cov>=4.1",
]
full = [
    "spectral>=0.23",
    "ray[default]>=2.2",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-macros-plugin",
    "mkdocs-glightbox",
]

[project.scripts]
spectralbridge-download = "spectralbridge.cli:download_main"
spectralbridge-pipeline = "spectralbridge.cli.pipeline_cli:main"
spectralbridge-qa = "spectralbridge.cli.qa_cli:main"
spectralbridge-recover-raw = "spectralbridge.cli.recover_cli:main"
spectralbridge-qa-dashboard = "spectralbridge.qa_dashboard:main"
spectralbridge-merge-duckdb = "spectralbridge.merge_duckdb:main"
cscal-download = "spectralbridge.cli:download_main"
cscal-pipeline = "spectralbridge.cli.pipeline_cli:main"
cscal-qa = "spectralbridge.cli.qa_cli:main"
cscal-recover-raw = "spectralbridge.cli.recover_cli:main"
cscal-qa-dashboard = "spectralbridge.qa_dashboard:main"
csc-merge-duckdb = "spectralbridge.merge_duckdb:main"

[project.urls]
Homepage = "https://github.com/earthlab/spectralbridge"
Documentation = "https://earthlab.github.io/spectralbridge/"
Issues = "https://github.com/earthlab/spectralbridge/issues"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
spectralbridge = ["data/*.json", "data/brightness/*.json"]

[tool.setuptools.packages.find]
where = ["src"]
